{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 40,
  "lineage": "d079432c-386c-df12-4626-1deb357c1914",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "identity-plus-mTLS_Gateway_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a640b520696dc6a8",
            "arn": "arn:aws:ec2:us-east-1:905418106762:instance/i-0d495a968f020973c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d495a968f020973c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "identity_plus-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec6a8fc0fe75095b",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_ip": "54.235.55.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce357f9207b56a4a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fda8a817c18ac0d5",
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus mTLS gateway VM",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus mTLS gateway VM",
              "Project": "Identity-Plus-POC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac09fb27bea2156",
              "sg-094e0c62ed1c00175"
            ]
          },
          "dependencies": [
            "aws_security_group.identity_plus_sg",
            "aws_security_group.mTLS_sg",
            "aws_subnet.identity-plus-lan-subnet",
            "aws_vpc.identity-plus-vpc",
            "data.aws_ami.ubuntu_2404_x86_64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "identity-plus-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a640b520696dc6a8",
            "arn": "arn:aws:ec2:us-east-1:905418106762:instance/i-010f4c998a871535d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010f4c998a871535d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05062f0cdcd1a4d8a",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0b430d8306f95e2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fda8a817c18ac0d5",
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus VM 0",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus VM 0",
              "Project": "Identity-Plus-POC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac09fb27bea2156"
            ]
          },
          "dependencies": [
            "aws_security_group.identity_plus_sg",
            "aws_subnet.identity-plus-lan-subnet",
            "aws_vpc.identity-plus-vpc",
            "data.aws_ami.ubuntu_2404_x86_64"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a640b520696dc6a8",
            "arn": "arn:aws:ec2:us-east-1:905418106762:instance/i-06aa417740dc66aa9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06aa417740dc66aa9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005031e37f3d5b82e",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e008695c2a82f88",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fda8a817c18ac0d5",
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus VM 1",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus VM 1",
              "Project": "Identity-Plus-POC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac09fb27bea2156"
            ]
          },
          "dependencies": [
            "aws_security_group.identity_plus_sg",
            "aws_subnet.identity-plus-lan-subnet",
            "aws_vpc.identity-plus-vpc",
            "data.aws_ami.ubuntu_2404_x86_64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "identity_plus_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418106762:internet-gateway/igw-0fa5169e08f5461db",
            "id": "igw-0fa5169e08f5461db",
            "owner_id": "905418106762",
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus IGW",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus IGW",
              "Project": "Identity-Plus-POC"
            },
            "vpc_id": "vpc-0abf426453b84fc69"
          },
          "dependencies": [
            "aws_vpc.identity-plus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "identity_plus_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b7b679087f6156d",
            "original_route_table_id": "rtb-0622d85806189866e",
            "route_table_id": "rtb-0622d85806189866e",
            "vpc_id": "vpc-0abf426453b84fc69"
          },
          "dependencies": [
            "aws_internet_gateway.identity_plus_igw",
            "aws_route_table.identity_plus_rt",
            "aws_vpc.identity-plus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "identity_plus_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418106762:route-table/rtb-0622d85806189866e",
            "id": "rtb-0622d85806189866e",
            "owner_id": "905418106762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa5169e08f5461db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0abf426453b84fc69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.identity_plus_igw",
            "aws_vpc.identity-plus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "identity_plus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418106762:security-group/sg-00ac09fb27bea2156",
            "description": "Security group for Identity Plus VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac09fb27bea2156",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "identity-plus-sg",
            "name_prefix": "",
            "owner_id": "905418106762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus Security Group",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus Security Group",
              "Project": "Identity-Plus-POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf426453b84fc69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.identity-plus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mTLS_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418106762:security-group/sg-094e0c62ed1c00175",
            "description": "Security group for example VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094e0c62ed1c00175",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Identity Plus mTLS sg",
            "name_prefix": "",
            "owner_id": "905418106762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus mTLS Security Group",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus mTLS Security Group",
              "Project": "Identity-Plus-POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf426453b84fc69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.identity-plus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "identity-plus-lan-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418106762:subnet/subnet-0fda8a817c18ac0d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda8a817c18ac0d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418106762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus LAN Subnet",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus LAN Subnet",
              "Project": "Identity-Plus-POC"
            },
            "vpc_id": "vpc-0abf426453b84fc69"
          },
          "dependencies": [
            "aws_vpc.identity-plus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "identity-plus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418106762:vpc/vpc-0abf426453b84fc69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf2be0babe69ed98",
            "default_route_table_id": "rtb-0622d85806189866e",
            "default_security_group_id": "sg-0cb1f0c8a3f4e92be",
            "dhcp_options_id": "dopt-00f065c2f76c981b9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abf426453b84fc69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0622d85806189866e",
            "owner_id": "905418106762",
            "tags": {
              "Environment": "dev",
              "Name": "Identity Plus VPC",
              "Project": "Identity-Plus-POC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Identity Plus VPC",
              "Project": "Identity-Plus-POC"
            }
          }
        }
      ]
    }
  ]
}